tooltip no longer flickers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,4 +16,5 @@ a {
 
 .county-tooltip {
   position: relative;
-  height: 20px; }
+  height: 20px;
+  pointer-events: none; }
